fixed margin issue on small screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -375,5 +375,6 @@ footer p{
     }
     .author-image {
         padding: 0 vw;
-    }
+        margin: 7vw;
+    }       
 }
